lab13-14/my-cluster/mybackend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mybackend-deployment
  labels:
    app: myapp-backend
    type: backend
spec:
  template:
    metadata:
      name: mybackend-pod
      labels:
        app: myapp-backend
        type: backend
    
    spec:
       containers:
           - name: my-mybackend-container
             image: pokorowski/mybackend
             imagePullPolicy: Never
    
  replicas: 3
  selector:
    matchLabels:
      type: backend
