lab13-14/my-cluster/postgres-deployment.yml
apiVersion: apps/v1

kind: Deployment

metadata:
  name: postgres-deployment
  labels:
    app: mypostgres
    type: db

spec:
  template:
    metadata:
      name: postgres-pod
      labels:
        app: mypostgres
        type: db

    spec:
      containers:
        - name: my-postgres-container
          image: postgres
          volumeMounts:
            - mountPath: "/var/lib/postgresql/data/pgdata"
              name: postgresvolume
              subPath: postgres
      volumes:
        - name: postgresvolume
          persistentVolumeClaim:
            claimName: postgres-pvc

  replicas: 1
  selector:
    matchLabels:
      type: db
