lab13-14/my-cluster/redis-deployment.yml
apiVersion: apps/v1

kind: Deployment

metadata:
  name: redis-deployment
    app: myredis
    type: cache

spec:
  template:
    metadata:
      name: redis-pod
      labels:
        app: myredis
        type: cache
    spec:
      containers:
      - name: my-redis-container
        image: redis
  replicas: 3
  selector:
    matchLabels:
      type: cache
