lab13-14/my-cluster/ingress-definition.yml
apiVersion extensions/v1beta1

kind: Ingress

metadata:
  name: ingress-test-service
  annotations:
    kubernetes.io/ingress.class: ngnix
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/affinity-mode: "persistent"
    nginx.ingress.kubernetes.io/session-cookie-name: "route"
    nginx.ingress.kubernetes.io/session-cookie-expires: "172000"
    nginx.ingress.kubernetes.io/session-cookie-max-age: "172000"
    
spec:
  rules:
    - http:
        paths:
          - path: api/?(.*)
            backend:
              serviceName: api-test-service
              serviceport: 5050
           - path: /
             backend:
               serviceName: frontend-iservice
               servicePort: 8080
